--- a/SIMH_Manual_Utilizador/Indice.html
+++ b/SIMH_Manual_Utilizador/Indice.html
@@ -147,6 +147,9 @@
 					<a href="#impressoes">14 - Impressões</a>
 				</li>
 				<li>
+					<a href="#relatorios">15 - Relatórios</a>
+				</li>
+				<li>
 					<a href="#anexos">Anexos</a>
 				</li>
 				<li>
