--- a/SIMH_Manual_Utilizador/index.html
+++ b/SIMH_Manual_Utilizador/index.html
@@ -81,6 +81,7 @@
 				<div id="ModuloAuditoria" class="modulo"></div>
 				<div id="ModuloAcoesBloco" class="modulo"></div>
 				<div id="ModuloImpressoes" class="modulo"></div>
+				<div id="ModuloRelatorios" class="modulo"></div>	
 				<div id="ModuloAnexos" class="modulo"></div>
 				<div id="ModuloFaq" class="modulo"></div>
           
