--- a/SIMH_Manual_Utilizador/Indice.html
+++ b/SIMH_Manual_Utilizador/Indice.html
@@ -93,7 +93,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#finalizarUrgente">9 - Fechar Urgente</a>
+					<a href="#fecharUrgente">9 - Fechar Urgente</a>
 				</li>
 				<li>
 					<div>10 - Gestão de Processos de Codificação</div>
