--- a/SIMH_Manual_Utilizador/index.html
+++ b/SIMH_Manual_Utilizador/index.html
@@ -114,7 +114,7 @@
 			  $("#ModuloSimuladores").load("content/simuladores.html");
 			  $("#ModuloMedicos").load("content/medicos.html");
 			  //$("#ModuloGestaoEspecialidades").load("content/especialidades.html")
-			  $("#ModuloFecharrUrgente").load("content/fecharurgente.html")
+			  $("#ModuloFecharUrgente").load("content/fecharurgente.html")
 			  $("#ModuloGestaoProcessosCod").load("content/gestaoProcessosCod.html")
 			  $("#ModuloMapeamentos").load("content/mapeamentos.html")
 			  $("#ModuloAuditoria").load("content/auditoria.html")
